src/styles.css
body {
  font-family: "Poppins", sans-serif;
  background: #272044;
}

.container {
  max-width: 1400px;
  margin: 0 auto;
}

.text-center {
  text-align: center;
}

.grid {
  display: grid;
  grid-gap: 50px;
}

.img-responsive {
  width: 100%;
  display: block;
}

.grid-2-columns {
  grid-template-columns: 1fr 1fr;
}

.grid-3-columns {
  grid-template-columns: 1fr 1fr 1fr;
}

.grid-3-columns-with-first-narrow {
  grid-template-columns: 1fr 2fr 2fr;
}

.embed {
  width: 100%;
  aspect-ratio: 1 / 1;
}

.instagram-embeds {
  margin: 30px;
}

.card {
  background-color: white;
  margin: 30px 0;
}

.card-header.grid {
  grid-gap: 0;
}

.card img {
  max-height: 200px;
  width: 100%;
}

.card-body {
  padding: 30px;
}

.card-footer {
  padding: 0 30px 30px;
}

.btn {
  display: block;
  color: white;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.5;
  text-align: center;
  letter-spacing: 3px;
  text-transform: uppercase;
  padding: 16px;
  background-color: #462cb3;
  text-decoration: none;
  border-radius: 4px;
}

.btn:hover {
  background-color: #614daf;
}

section {
  max-width: 100%;
  margin: 0 auto;
  padding: 100px;
}

section.secondary {
  background-color: #f8f8f8;
}

header {
  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
    url("../images/leeds-river.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  padding: 200px 0;
  width: 100%;
  text-align: center;
  color: white;
}

header h1 {
  font-weight: 700;
  font-size: 96px;
  line-height: 1;
  margin: 30px 0;
}

header h2 {
  font-weight: 400;
  font-size: 40px;
  line-height: 1.5;
  margin: 0;
}

header h3 {
  font-weight: 900;
  font-size: 24px;
  line-height: 1.5;
  letter-spacing: 5px;
  margin: 0;
}

header a {
  font-weight: 700;
  font-size: 14px;
  line-height: 1.5;
  text-align: center;
  letter-spacing: 3px;
  text-transform: uppercase;
  text-decoration: none;
  color: #272044;
  background-color: white;
  display: inline-block;
  padding: 16px 32px;
  margin-top: 32px;
}

main {
  background-color: white;
}

main h2 {
  font-weight: 700;
  font-size: 16px;
  line-height: 1.5;
  margin: 0;
  letter-spacing: 5px;
  color: #272044;
  opacity: 0.3;
  text-transform: uppercase;
  padding-bottom: 40px;
}

main h3 {
  font-weight: 700;
  font-size: 40px;
  line-height: 1.5;
  color: #272044;
  margin: 0;
  padding-bottom: 40px;
}

main h4 {
  font-weight: 700;
  font-size: 20px;
  line-height: 1;
  color: #272044;
  margin: 0;
}

main h5 {
  font-weight: 700;
  font-size: 13px;
  line-height: 1;
  color: #272044;
  margin: 0;
  padding: 10px 0 10px 0;
}

main p {
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
  color: #272044;
  opacity: 0.7;
}

footer {
  background-image: linear-gradient(
      rgba(39, 32, 68, 0.9),
      rgba(39, 32, 68, 0.9)
    ),
    url("../images/leeds-drone.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  padding: 100px 0;
  color: white;
}

footer p {
  font-weight: 400;
  font-size: 16px;
  opacity: 0.7;
  line-height: 26px;
}

footer ul {
  padding: 0;
}

footer li {
  list-style: none;
  margin: 0;
  padding: 0;
}

footer li a {
  line-height: 46px;
}
footer a {
  color: white;
  opacity: 0.7;
}

footer h3 {
  font-weight: 700;
  font-size: 20px;
  line-height: 30px;
}

@media (max-width: 900px) {
  header {
    padding: 60px 0;
  }

  header h1 {
    font-size: 48px;
  }

  header h2 {
    font-size: 20px;
  }

  header h3 {
    font-size: 12px;
  }

  .grid {
    grid-template-columns: 1fr;
    grid-gap: 32px;
  }

  section {
    padding: 30px;
  }

  .card-header {
    display: none;
  }

  .embed {
    aspect-ratio: 16 / 9;
  }
}

